--- a/index.html
+++ b/index.html
@@ -1,76 +1,80 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>The Geek Shop — Home</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Geek Shop - Home</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" type="module"></script>
 </head>
 <body>
-  <!-- Header (keeps original color/design) -->
   <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="index.html">The Geek Shop</a>
-      <nav class="main-nav">
+    <nav>
+      <div class="logo"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></div>
+      <div class="nav-links">
         <a href="index.html">Home</a>
-        <a href="products.html">Shop</a>
+        <a href="products.html">Products</a>
+        <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
-        <a href="order-status.html">Order Status</a>
-      </nav>
-    </div>
+      </div>
+    </nav>
   </header>
 
-  <!-- Mid Section -->
   <main class="container">
-    <!-- May interest you (random 5 products) -->
-    <section id="may-interest" class="section">
-      <h2>May interest you</h2>
-      <div id="interest-list" class="grid-cards"></div>
+    <!-- Categories Section -->
+    <section class="categories-section">
+      <h2>Shop by Categories</h2>
+      <div class="categories-grid">
+        <a href="products.html?category=keycaps" class="category-card" style="background-image: url('https://via.placeholder.com/300x200/667eea/ffffff?text=Keycaps');">
+          <div class="category-overlay">
+            <h3>Keycaps</h3>
+          </div>
+        </a>
+        <a href="products.html?category=switches" class="category-card" style="background-image: url('https://via.placeholder.com/300x200/764ba2/ffffff?text=Switches');">
+          <div class="category-overlay">
+            <h3>Switches</h3>
+          </div>
+        </a>
+        <a href="products.html?category=keyboard" class="category-card" style="background-image: url('https://via.placeholder.com/300x200/f093fb/ffffff?text=Keyboard');">
+          <div class="category-overlay">
+            <h3>Keyboards</h3>
+          </div>
+        </a>
+        <a href="products.html?category=barebones" class="category-card" style="background-image: url('https://via.placeholder.com/300x200/4facfe/ffffff?text=BareBones');">
+          <div class="category-overlay">
+            <h3>BareBones</h3>
+          </div>
+        </a>
+        <a href="products.html?category=collectables" class="category-card" style="background-image: url('https://via.placeholder.com/300x200/43e97b/ffffff?text=Collectables');">
+          <div class="category-overlay">
+            <h3>Collectables</h3>
+          </div>
+        </a>
+      </div>
     </section>
 
-    <!-- Categories -->
-    <section id="categories" class="section">
-      <h2>Categories</h2>
-      <div class="categories-grid">
-        <!-- Buttons generated client-side. Admin decides product categories on product data -->
-        <button class="cat-card" data-cat="Keycaps">
-          <div class="cat-bg" style="background-image: url('assets/img/categories/keycaps.jpg')"></div>
-          <span>Keycaps</span>
-        </button>
-
-        <button class="cat-card" data-cat="Switches">
-          <div class="cat-bg" style="background-image: url('assets/img/categories/switches.jpg')"></div>
-          <span>Switches</span>
-        </button>
-
-        <button class="cat-card" data-cat="Keyboard & BareBones">
-          <div class="cat-bg" style="background-image: url('assets/img/categories/keyboard.jpg')"></div>
-          <span>Keyboard & BareBones</span>
-        </button>
-
-        <button class="cat-card" data-cat="Collectables">
-          <div class="cat-bg" style="background-image: url('assets/img/categories/collectables.jpg')"></div>
-          <span>Collectables</span>
-        </button>
-      </div>
+    <!-- May Interest You Section -->
+    <section class="interest-section">
+      <h2>May Interest You</h2>
+      <div id="interest-products" class="product-list interest-grid"></div>
     </section>
   </main>
 
-  <!-- Footer -->
   <footer class="site-footer">
-    <div class="container">
-      <div class="socials">
-        <a href="https://www.facebook.com">Facebook</a>
-        <a href="https://www.instagram.com">Instagram</a>
-        <a href="https://wa.me/01960788862">WhatsApp</a>
+    <div class="footer-content">
+      <div class="footer-social">
+        <a href="https://www.facebook.com/thegeek.shop0" target="_blank">
+          <img src="facebook.png" alt="Facebook">
+        </a>
+        <a href="https://www.instagram.com/thegeekshop.0" target="_blank">
+          <img src="instagram.png" alt="Instagram">
+        </a>
+        <a href="https://wa.me/01960788862" target="_blank">
+          <img src="whatsapp.png" alt="WhatsApp">
+        </a>
       </div>
-      <p>© All rights reserved by The Geek Shop</p>
+      <p>&copy; All rights reserved by The Geek Shop</p>
     </div>
   </footer>
-
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-  <script src="assets/js/firebase-init.js"></script>
-  <script src="assets/js/home.js"></script>
 </body>
 </html>
