--- a/products.html
+++ b/products.html
@@ -1,39 +1,64 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>The Geek Shop — Products</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Products - The Geek Shop</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" type="module"></script>
 </head>
 <body>
   <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="index.html">The Geek Shop</a>
-      <nav class="main-nav">
+    <nav>
+      <div class="logo"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></div>
+      <div class="nav-links">
         <a href="index.html">Home</a>
-        <a href="products.html">Shop</a>
+        <a href="products.html">Products</a>
+        <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
-      </nav>
-    </div>
+      </div>
+    </nav>
   </header>
 
   <main class="container">
-    <section class="section">
-      <h1>All Products</h1>
-      <div id="products-grid" class="grid-cards"></div>
-    </section>
+    <h1>Products</h1>
+
+    <div class="filter-section">
+      <select id="category-filter" class="filter-select">
+        <option value="all">All Categories</option>
+        <option value="keycaps">Keycaps</option>
+        <option value="switches">Switches</option>
+        <option value="keyboard">Keyboards</option>
+        <option value="barebones">BareBones</option>
+        <option value="collectables">Collectables</option>
+      </select>
+    </div>
+
+    <h2>New Added</h2>
+    <div id="new-products" class="product-list new-hot-list"></div>
+
+    <h2>Hot Deals</h2>
+    <div id="hot-deals" class="product-list new-hot-list"></div>
+
+    <h2 id="all-products-title">All Products</h2>
+    <div id="all-products" class="product-list"></div>
   </main>
 
   <footer class="site-footer">
-    <div class="container">
-      <p>© All rights reserved by The Geek Shop</p>
+    <div class="footer-content">
+      <div class="footer-social">
+        <a href="https://www.facebook.com/thegeek.shop0" target="_blank">
+          <img src="facebook.png" alt="Facebook">
+        </a>
+        <a href="https://www.instagram.com/thegeekshop.0" target="_blank">
+          <img src="instagram.png" alt="Instagram">
+        </a>
+        <a href="https://wa.me/01960788862" target="_blank">
+          <img src="whatsapp.png" alt="WhatsApp">
+        </a>
+      </div>
+      <p>&copy; All rights reserved by The Geek Shop</p>
     </div>
   </footer>
-
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-  <script src="assets/js/firebase-init.js"></script>
-  <script src="assets/js/products.js"></script>
 </body>
 </html>
