--- a/products.html
+++ b/products.html
@@ -1,10 +1,10 @@
-<DOCUMENT filename="index.html">
+<DOCUMENT filename="products.html">
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>Products</title>
  <link rel="icon" type="image/x-icon" href="logo t.png"> 
   <link rel="stylesheet" href="style.css">
   <script type="module">
@@ -48,10 +48,8 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
   </header>
 
   <div class="container">
-    <h2>May Interest You</h2>
-    <div id="interest-products" class="product-list new-hot-list"></div>
-    <h2>Categories</h2>
-    <div id="categories" class="category-list"></div>
+    <h1>All Products</h1>
+    <div id="all-products" class="product-list"></div>
   </div>
    
   <div id="checkout-modal" class="modal">
