--- a/status.html
+++ b/status.html
@@ -61,7 +61,7 @@
 
     <h3>2. Delivery Timeline</h3>
     <ul>
-      <li>Estimated delivery time is <b>3–7 business days</b>, depending on location and courier efficiency.</li>
+      <li>Estimated delivery time is <b>3–7 business days for normal order and 20-40 days for pre order </b>, depending on location and courier efficiency.</li>
       <li>Customers will be notified with tracking details once the order has been dispatched.</li>
     </ul>
 
@@ -102,8 +102,8 @@
     <h3>💬 Support</h3>
     <p class="muted">
       For assistance, please reach us via:<br><br>
-      ▪ Facebook: <a href="https://www.facebook.com/kawsara.tonmoy/" target="_blank">The Geek Shop</a><br>
-      ▪ Instagram: <a href="https://www.instagram.com/kawsara.tonmoy/" target="_blank">@thegeekshop</a><br>
+      ▪ Facebook: <a href="https://www.facebook.com/thegeek.shop0/" target="_blank">The Geek Shop</a><br>
+      ▪ Instagram: <a href="https://www.instagram.com/thegeek.shop0/" target="_blank">@thegeekshop</a><br>
       ▪ WhatsApp: <a href="https://wa.me/01960788862" target="_blank">WhatsApp</a>
     </p>
   </div>
@@ -115,10 +115,10 @@
     <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
       <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
     </a>
-    <a href="https://www.instagram.com/thegeekshop.0" target="_blank" style="margin: 0 10px;">
+    <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
       <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
-        <a href="wa.me/01960788862" target="_blank" style="margin: 0 10px;">
+        <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
       <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
   </div>
@@ -128,6 +128,7 @@
 </body>
 
 </html>
+
 
 
 
