--- a/admin.html
+++ b/admin.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +11,6 @@
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
   </script>
   <script type="module" src="script.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="site-header">
@@ -21,7 +19,6 @@
         <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
       </a>
       <div class="nav-links">
-        <a href="index.html">Home</a>
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
@@ -29,9 +26,9 @@
     </nav>
   </header>
 
-  <div class="container">
-    <div id="login-panel">
-      <h1>Admin Login</h1>
+  <main class="container">
+    <div id="login-panel" class="card" style="display: none;">
+      <h2>Admin Login</h2>
       <form id="login-form" class="form">
         <div>
           <label>Email</label>
@@ -45,9 +42,9 @@
       </form>
     </div>
 
-    <div id="admin-panel" style="display: none;">
+    <div id="admin-panel" class="card" style="display: none;">
       <div class="panel-header">
-        <h1>Admin Panel</h1>
+        <h2>Admin Panel</h2>
         <button onclick="logoutAdmin()">Logout</button>
       </div>
 
@@ -66,21 +63,21 @@
         <div class="row">
           <div>
             <label>Discount (tk)</label>
-            <input id="add-discount">
+            <input id="add-discount" value="0">
           </div>
           <div>
             <label>Image URLs (comma separated)</label>
-            <textarea id="add-images" required></textarea>
+            <textarea id="add-images" required placeholder="https://...jpg, https://...png"></textarea>
           </div>
         </div>
         <div class="row">
           <div>
             <label>Category</label>
             <select id="add-category" required>
-              <option value="Keycaps">Keycaps</option>
-              <option value="Switches">Switches</option>
-              <option value="Keyboard and Barebones">Keyboard and Barebones</option>
-              <option value="Collectables">Collectables</option>
+              <option value="keycaps">Keycaps</option>
+              <option value="switches">Switches</option>
+              <option value="keyboard-barebones">Keyboard and Barebones</option>
+              <option value="collectables">Collectables</option>
             </select>
           </div>
           <div>
@@ -91,7 +88,15 @@
         <div class="row">
           <div>
             <label>Stock</label>
-            <input id="add-stock" type="number" min="0">
+            <input id="add-stock" type="number" value="0">
+          </div>
+          <div>
+            <label>Availability</label>
+            <select id="add-availability" required>
+              <option value="Ready">Ready to Order</option>
+              <option value="Pre Order">Pre Order</option>
+              <option value="Upcoming">Upcoming</option>
+            </select>
           </div>
         </div>
         <div>
@@ -106,13 +111,14 @@
         <table class="data-table">
           <thead>
             <tr>
-              <th></th> <!-- Toggle column -->
+              <th></th>
               <th>Name</th>
               <th>Price</th>
               <th>Category</th>
               <th>Color</th>
               <th>Discount (tk)</th>
               <th>Stock</th>
+              <th>Availability</th>
               <th>Status</th>
               <th>Actions</th>
             </tr>
@@ -132,7 +138,8 @@
               <th>Color</th>
               <th>Qty</th>
               <th>Delivery</th>
-              <th>Total</th>
+              <th>Paid</th>
+              <th>Due</th>
               <th>Name</th>
               <th>Phone</th>
               <th>Address</th>
@@ -145,22 +152,6 @@
         </table>
       </div>
     </div>
-  </div>
-
-<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
-  <div>
-    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-    </a>
-    <a href="https://www.instagram.com/thegeekshop.0" target="_blank" style="margin: 0 10px;">
-      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
-        <a href="wa.me/01960788862" target="_blank" style="margin: 0 10px;">
-      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
-  </div>
- 
-  <p>&copy; All rights reserved by The Geek Shop</p>
-</footer>
+  </main>
 </body>
 </html>
