--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
- <link rel="icon" type="image/x-icon" href="logo t.png"> 
+  <link rel="icon" type="image/x-icon" href="logo t.png"> 
   <link rel="stylesheet" href="style.css">
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
@@ -14,7 +13,6 @@
   </script>
   <script type="module" src="script.js"></script>
 
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="site-header">
@@ -23,7 +21,6 @@
         <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
       </a>
       <div class="nav-links">
-        <a href="index.html">Home</a>
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
@@ -31,108 +28,39 @@
     </nav>
   </header>
 
-  <div class="container">
-    <h2>May Interest You</h2>
-    <div id="interest-products" class="product-list new-hot-list"></div>
-    <h2>Categories</h2>
-    <div id="categories" class="category-list"></div>
-  </div>
-   
-  <div id="checkout-modal" class="modal">
-    <div class="modal-content card">
-      <div class="modal-header">
-        <h2>Checkout</h2>
-        <button id="close-modal-btn" class="secondary">Close</button>
-      </div>
-      <form id="checkout-form" class="form">
-        <div class="row">
-          <div>
-            <label>Product Name</label>
-            <input id="co-product-name" readonly>
-          </div>
-          <div>
-            <label>Color</label>
-            <input id="co-color" readonly>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Price (tk)</label>
-            <input id="co-price" readonly>
-            <input id="co-product-id" type="hidden">
-            <input id="co-unit-price-raw" type="hidden">
-            <input id="co-available-stock" type="hidden">
-          </div>
-          <div>
-            <label>Quantity</label>
-            <input id="co-qty" type="number" min="1" required>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Delivery</label>
-            <input id="co-delivery" readonly>
-          </div>
-          <div>
-            <label>Total (tk)</label>
-            <input id="co-total" readonly>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Name</label>
-            <input id="co-name" required>
-          </div>
-          <div>
-            <label>Phone</label>
-            <input id="co-phone" type="tel" required>
-          </div>
-        </div>
-        <div>
-          <label>Address</label>
-          <textarea id="co-address" required></textarea>
-        </div>
-        <div class="row">
-          <div>
-            <label>Payment Method</label>
-            <select id="co-payment" required>
-              <option value="">Select</option>
-              <option value="Cash on Delivery">Cash on Delivery</option>
-              <option value="Bkash">Bkash</option>
-            </select>
-          </div>
-          <div>
-            <label>Pay to (Send money)</label>
-            <input id="co-payment-number" value="This text is read-only" readonly >
-          </div>
-        </div>
-        <div>
-          <label>Transaction ID</label>
-          <input id="co-txn">
-        </div>
-        <p id="co-note" class="muted"></p>
-        <button id="place-order-btn" type="submit">Place Order</button>
-      </form>
-    </div>
-  </div> <div class="image-viewer" id="image-viewer">
-        <button id="close-viewer" class="close-viewer">×</button>
-        <img id="viewer-img" src="" alt="Zoomed Image">
-    </div>
-<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
-  <div>
-    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-    </a>
-    <a href="https://www.instagram.com/thegeekshop.0" target="_blank" style="margin: 0 10px;">
-      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
-        <a href="wa.me/01960788862" target="_blank" style="margin: 0 10px;">
-      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
-  </div>
- 
-  <p>&copy; All rights reserved by The Geek Shop</p>
-</footer>
-</body>
+  <main class="container">
+    <h1>Welcome to The Geek Shop</h1>
 
+    <h2>May Interest You</h2>
+    <div id="interest-products" class="product-list new in new-hot-list"></div>
+
+    <h2>Categories</h2>
+    <div class="categories-grid">
+      <a href="products.html?category=keycaps" class="category-button keycaps" style="background-image: url('keycaps.jpg');">Keycaps</a>
+      <a href="products.html?category=switches" class="category-button switches" style="background-image: url('switches.jpg');">Switches</a>
+      <a href="products.html?req?category=keyboard-barebones" class="category-button keyboard-barebones" style="background-image: url('keyboards.jpg');">Keyboard and Barebones</a>
+      <a href="products.html?category=collectables" class="category-button collectables" style="background-image: url('collectables.jpg');">Collectables</a>
+    </div>
+  </main>
+
+  <div id="image-viewer" class="image-viewer">
+    <button id="close-viewer" class="close-viewer">×</button>
+    <img id="viewer-img" src="" alt="">
+  </div>
+
+  <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000; font-family: Arial, sans-serif;">
+    <div>
+      <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+        <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+      </a>
+      <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+      </a>
+      <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
+        <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
+      </a>
+    </div>
+    <p>© All rights reserved by The Geek Shop</p>
+  </footer>
+</body>
 </html>
