--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="icon" type="image/x-icon" href="logo t.png"> 
+  <link rel="icon" type="image/x-icon" href="logo t.png">
   <link rel="stylesheet" href="style.css">
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
@@ -12,11 +12,25 @@
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
   </script>
   <script type="module" src="script.js"></script>
-
+  <script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'HTTPS://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '655776497078930');
+  fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
+  /></noscript>
 </head>
 <body>
   <header class="site-header">
-     <nav>
+    <nav>
       <a href="index.html" class="logo">
         <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
       </a>
@@ -35,12 +49,7 @@
     <div id="interest-products" class="product-list new in new-hot-list"></div>
 
     <h2>Categories</h2>
-    <div class="categories-grid">
-      <a href="products.html?category=keycaps" class="category-button keycaps" style="background-image: url('keycaps.jpg');">Keycaps</a>
-      <a href="products.html?category=switches" class="category-button switches" style="background-image: url('switches.jpg');">Switches</a>
-      <a href="products.html?req?category=keyboard-barebones" class="category-button keyboard-barebones" style="background-image: url('keyboards.jpg');">Keyboard and Barebones</a>
-      <a href="products.html?category=collectables" class="category-button collectables" style="background-image: url('collectables.jpg');">Collectables</a>
-    </div>
+    <div id="categories-grid" class="categories-grid"></div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
