--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
   </script>
   <script type="module" src="script.js"></script>
+
 </head>
 <body>
   <header class="site-header">
@@ -35,12 +36,10 @@
 
     <h2>Categories</h2>
     <div class="categories-grid">
-      <a href="products.html?category=keycaps" class="card category-button keycaps" style="background-image: url('keycaps.jpg');">Keycaps</a>
-      <a href="products.html?category=switches" class="card category-button switches" style="background-image: url('switches.jpg');">Switches</a>
-      <a href="products.html?category=keyboard-barebones" class="card category-button keyboard-barebones" style="background-image: url('keyboards.jpg');">Keyboard and Barebones</a>
-      <a
-```html
-      <a href="products.html?category=collectables" class="card category-button collectables" style="background-image: url('collectables.jpg');">Collectables</a>
+      <a href="products.html?category=keycaps" class="category-button keycaps" style="background-image: url('keycaps.jpg');">Keycaps</a>
+      <a href="products.html?category=switches" class="category-button switches" style="background-image: url('switches.jpg');">Switches</a>
+      <a href="products.html?req?category=keyboard-barebones" class="category-button keyboard-barebones" style="background-image: url('keyboards.jpg');">Keyboard and Barebones</a>
+      <a href="products.html?category=collectables" class="category-button collectables" style="background-image: url('collectables.jpg');">Collectables</a>
     </div>
   </main>
 
