--- a/product.html
+++ b/product.html
@@ -29,8 +29,6 @@
 
   <main class="container">
     <div id="product-detail" class="product-detail"></div>
-    <h2>Other Products</h2>
-    <div id="other-products" class="product-list new in new-hot-list"></div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
@@ -129,10 +127,8 @@
         <div>
           <p id="co-note" class="muted"></p>
         </div>
-        <div class="checkout-actions">
-          <button id="place-order-btn" type="submit">Place Order</button>
-        </div>
-      </form>
+        <button id="place-order-btn" type="submit">Place Order</button>
+.form>
     </div>
   </div>
 
