--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin</title>
-  <link rel="icon" type="image/x-icon" href="logo t.png"> 
   <link rel="stylesheet" href="style.css">
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
@@ -15,7 +14,7 @@
 </head>
 <body>
   <header class="site-header">
-    <nav>
+     <nav>
       <a href="index.html" class="logo">
         <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
       </a>
@@ -27,43 +26,53 @@
     </nav>
   </header>
 
-  <main class="container" style="padding-bottom: 100px;">
-    <div id="login-panel">
-      <div class="card" style="max-width: 400px; margin: 40px auto;">
-        <h2 style="text-align: center;">Admin Login</h2>
-        <form id="login-form" class="form">
+  <main class="container">
+    <div id="login-panel" class="card" style="display: none;">
+      <h2>Admin Login</h2>
+      <form id="login-form" class="form">
+        <div>
           <label>Email</label>
-          <input id="admin-email" type="email" required placeholder="admin@example.com">
+          <input id="admin-email" type="email" required>
+        </div>
+        <div>
           <label>Password</label>
           <input id="admin-pass" type="password" required>
-          <button type="submit">Login</button>
-        </form>
-      </div>
+        </div>
+        <button type="submit">Login</button>
+      </form>
     </div>
 
-    <div id="admin-panel" style="display: none;">
-      <div class="card" style="margin-bottom: 20px;">
-        <h2>Add New Product</h2>
-        <form id="add-product-form" class="form">
-          <div class="row">
-            <div><label>Name</label><input id="add-name" required></div>
-            <div><label>Color</label><input id="add-color"></div>
+    <div id="admin-panel" class="card" style="display: none;">
+      <div class="panel-header">
+        <h2>Admin Panel</h2>
+        <button onclick="logoutAdmin()">Logout</button>
+      </div>
+
+      <h2>Add Product</h2>
+      <form id="add-product-form" class="form">
+        <div class="row">
+          <div>
+            <label>Name</label>
+            <input id="add-name" required>
           </div>
-          <div class="row">
-            <div><label>Price (tk)</label><input id="add-price" type="number" min="0" required></div>
-            <div><label>Discount (tk)</label><input id="add-discount" type="number" min="0" value="0"></div>
+          <div>
+            <label>Price (tk)</label>
+            <input id="add-price" required>
           </div>
-          <div class="row">
-            <div><label>Stock</label><input id="add-stock" type="number" min="0" required></div>
-            <div><label>Availability</label>
-              <select id="add-availability" required>
-                <option value="Ready">Ready</option>
-                <option value="Pre Order">Pre Order</option>
-                <option value="Upcoming">Upcoming</option>
-              </select>
-            </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Discount (tk)</label>
+            <input id="add-discount" value="0">
           </div>
-          <div><label>Category</label>
+          <div>
+            <label>Image URLs (comma separated)</label>
+            <textarea id="add-images" required placeholder="https://...jpg, https://...png"></textarea>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Category</label>
             <select id="add-category" required>
               <option value="keycaps">Keycaps</option>
               <option value="switches">Switches</option>
@@ -71,28 +80,45 @@
               <option value="collectables">Collectables</option>
             </select>
           </div>
-          <div><label>Image URLs (comma separated)</label>
-            <textarea id="add-images" required placeholder="https://...jpg, https://...png"></textarea>
+          <div>
+            <label>Color</label>
+            <input id="add-color">
           </div>
-          <div><label>Description</label>
-            <textarea id="add-description"></textarea>
+        </div>
+        <div class="row">
+          <div>
+            <label>Stock</label>
+            <input id="add-stock" type="number" value="0">
           </div>
-          <button type="submit">Add Product</button>
-        </form>
-      </div>
+          <div>
+            <label>Availability</label>
+            <select id="add-availability" required>
+              <option value="Ready">Ready to Order</option>
+              <option value="Pre Order">Pre Order</option>
+              <option value="Upcoming">Upcoming</option>
+            </select>
+          </div>
+        </div>
+        <div>
+          <label>Description</label>
+          <textarea id="add-desc"></textarea>
+        </div>
+        <button type="submit">Add Product</button>
+      </form>
 
       <h2>Products</h2>
       <div class="table-wrapper">
         <table class="data-table">
           <thead>
             <tr>
+              <th></th>
               <th>Name</th>
-              <th>Color</th>
               <th>Price</th>
-              <th>Discount</th>
+              <th>Category</th>
+              <th>Color</th>
+              <th>Discount (tk)</th>
               <th>Stock</th>
               <th>Availability</th>
-              <th>Category</th>
               <th>Status</th>
               <th>Actions</th>
             </tr>
@@ -101,7 +127,7 @@
         </table>
       </div>
 
-      <h2 style="margin-top: 40px;">Orders</h2>
+      <h2>Orders</h2>
       <div class="table-wrapper">
         <table class="data-table">
           <thead>
@@ -111,13 +137,13 @@
               <th>Product</th>
               <th>Color</th>
               <th>Qty</th>
+              <th>Delivery</th>
               <th>Paid</th>
               <th>Due</th>
-              <th>Total</th>
               <th>Name</th>
               <th>Phone</th>
               <th>Address</th>
-              <th>Method</th>
+              <th>Payment</th>
               <th>Txn ID</th>
               <th>Status</th>
             </tr>
@@ -125,24 +151,7 @@
           <tbody id="orders-body"></tbody>
         </table>
       </div>
-
-      <button onclick="logoutAdmin()" style="margin-top: 20px;">Logout</button>
     </div>
   </main>
-
-  <footer>
-    <div>
-      <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-        <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-      </a>
-      <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-      </a>
-      <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
-        <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
-      </a>
-    </div>
-    <p>© All rights reserved by The Geek Shop</p>
-  </footer>
 </body>
 </html>
