--- a/product.html
+++ b/product.html
@@ -29,6 +29,8 @@
 
   <main class="container">
     <div id="product-detail" class="product-detail"></div>
+    <h2>Other Products</h2>
+    <div id="other-products" class="categories-grid"></div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
@@ -128,7 +130,7 @@
           <p id="co-note" class="muted"></p>
         </div>
         <button id="place-order-btn" type="submit">Place Order</button>
-.form>
+      </form>
     </div>
   </div>
 
