--- a/products.html
+++ b/products.html
@@ -29,7 +29,7 @@
 
   <main class="container">
     <h1>Products</h1>
-    <div id="product-list" class="product-list"></div>
+    <div id="product-list" class="categories-grid"></div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
