--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
   </script>
   <script type="module" src="script.js"></script>
-
 </head>
 <body>
   <header class="site-header">
@@ -32,13 +31,13 @@
     <h1>Welcome to The Geek Shop</h1>
 
     <h2>May Interest You</h2>
-    <div id="interest-products" class="product-list new in new-hot-list"></div>
+    <div id="interest-products" class="categories-grid"></div>
 
     <h2>Categories</h2>
     <div class="categories-grid">
       <a href="products.html?category=keycaps" class="category-button keycaps" style="background-image: url('keycaps.jpg');">Keycaps</a>
       <a href="products.html?category=switches" class="category-button switches" style="background-image: url('switches.jpg');">Switches</a>
-      <a href="products.html?req?category=keyboard-barebones" class="category-button keyboard-barebones" style="background-image: url('keyboards.jpg');">Keyboard and Barebones</a>
+      <a href="products.html?category=keyboard-barebones" class="category-button keyboard-barebones" style="background-image: url('keyboards.jpg');">Keyboard and Barebones</a>
       <a href="products.html?category=collectables" class="category-button collectables" style="background-image: url('collectables.jpg');">Collectables</a>
     </div>
   </main>
